@@ -5,7 +5,9 @@
 * Adding AV1 support for rigaya's AMD hardware encoder!
 * Adding #192 a true portable mode for Windows (thanks to Demicro)
 * Fixing lookup for QSVEncC
-
+* Fixing lookup for hdr10plus_tool
+* Fixing concat builder
+* Fixing #390 Wrong scale and behavior for DPI 250% on Windows (thanks to smtad)
 
 ## Version 5.0.0
 
